fix the vertical alignment of the number of comments.

--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,9 @@ p.balloon-right::after {
 }
 .score img,
 .like img,
-.like span {
+.like span,
+.comment-count img,
+.comment-count span {
 	vertical-align:		middle;
 }
 /* -------------------------------------------- */
